# 生成目标名字
SET(EXEC_COMMON_BUILD_TARGET_NAME "common")

# 头文件目录、依赖库目录、依赖库、宏定义、编译选项
IF(MSVC)
    # 头文件目录
    SET(EXEC_COMMON_INCLUDE_DIR
        ${PROJECT_SOURCE_DIR}/test/common
        ${PROJECT_SOURCE_DIR}/3rd/util/include
        ${PROJECT_SOURCE_DIR}/../fmt/fmt/include
        ${PROJECT_SOURCE_DIR}/../spdlog/spdlog/include
        ${PROJECT_SOURCE_DIR}/../vcpkg/vcpkg/packages/protobuf_x64-windows-static/include
    )

    # 依赖库目录
    SET(EXEC_COMMON_LINK_LIBS_DIR
        ${PROJECT_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}
        ${PROJECT_SOURCE_DIR}/../vcpkg/vcpkg/packages/protobuf_x64-windows-static/${VCPKG_LIBS_DIR_REFIX}/lib
    )

    # 依赖库
    SET(EXEC_COMMON_LINK_LIBS
        util
        libprotobuf${VCPKG_LIBS_NAME_REFIX}
    )

    # 宏定义
    SET(EXEC_COMMON_COMPILE_DEFINITIONS
        -D_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING
        -DEXEC_COMMON_VALUE_JUST_FOR_TEST=818
        -DFMT_HEADER_ONLY
        -DSPDLOG_FMT_EXTERNAL
    )

    # 编译选项
    SET(EXEC_COMMON_COMPILE_OPTIONS
        /wd4100
        /wd4125
        /wd4819
    )
ELSE()
    # 头文件目录
    SET(EXEC_COMMON_INCLUDE_DIR
        ${PROJECT_SOURCE_DIR}/test/common
        ${PROJECT_SOURCE_DIR}/3rd/util/include
        ${PROJECT_SOURCE_DIR}/../fmt/fmt/include
        ${PROJECT_SOURCE_DIR}/../spdlog/spdlog/include
        ${PROJECT_SOURCE_DIR}/../vcpkg/vcpkg/packages/protobuf_x64-linux/include
    )

    # 依赖库目录
    SET(EXEC_COMMON_LINK_LIBS_DIR
        ${PROJECT_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}
        ${PROJECT_SOURCE_DIR}/../vcpkg/vcpkg/packages/protobuf_x64-linux/${VCPKG_LIBS_DIR_REFIX}/lib
    )

    # 依赖库
    SET(EXEC_COMMON_LINK_LIBS
        -lutil
        -lprotobuf${VCPKG_LIBS_NAME_REFIX}
        -lpthread
    )

    # 宏定义
    SET(EXEC_COMMON_COMPILE_DEFINITIONS
        -DEXEC_COMMON_VALUE_JUST_FOR_TEST=818
        -DFMT_HEADER_ONLY
        -DSPDLOG_FMT_EXTERNAL
    )

    # 编译选项
    SET(EXEC_COMMON_COMPILE_OPTIONS
        -Wno-unused-parameter
    )
ENDIF()

MESSAGE(STATUS "---------------------------------------------------------------------")

# 递归添加[./]目录下所有源文件(不包括头文件)
#AUX_SOURCE_DIRECTORY(./ EXEC_COMMON_DIR_SRC_LIST)
FILE(GLOB_RECURSE EXEC_COMMON_DIR_SRC_LIST ./*.c ./*.cc ./*.cpp)

# 生成目标可执行文件
ADD_EXECUTABLE(${EXEC_COMMON_BUILD_TARGET_NAME}                     ${EXEC_COMMON_DIR_SRC_LIST})
TARGET_INCLUDE_DIRECTORIES(${EXEC_COMMON_BUILD_TARGET_NAME} PRIVATE ${EXEC_COMMON_INCLUDE_DIR})
TARGET_COMPILE_DEFINITIONS(${EXEC_COMMON_BUILD_TARGET_NAME} PRIVATE ${EXEC_COMMON_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(${EXEC_COMMON_BUILD_TARGET_NAME}     PRIVATE ${EXEC_COMMON_COMPILE_OPTIONS})
TARGET_LINK_DIRECTORIES(${EXEC_COMMON_BUILD_TARGET_NAME}    PRIVATE ${EXEC_COMMON_LINK_LIBS_DIR})
TARGET_LINK_LIBRARIES(${EXEC_COMMON_BUILD_TARGET_NAME}      PRIVATE ${EXEC_COMMON_LINK_LIBS})

MESSAGE(STATUS "EXEC_COMMON_DIR_SRC_LIST        = ${EXEC_COMMON_DIR_SRC_LIST}")
MESSAGE(STATUS "EXEC_COMMON_INCLUDE_DIR         = ${EXEC_COMMON_INCLUDE_DIR}")
MESSAGE(STATUS "EXEC_COMMON_COMPILE_DEFINITIONS = ${EXEC_COMMON_COMPILE_DEFINITIONS}")
MESSAGE(STATUS "EXEC_COMMON_COMPILE_OPTIONS     = ${EXEC_COMMON_COMPILE_OPTIONS}")
MESSAGE(STATUS "EXEC_COMMON_LINK_LIBS_DIR       = ${EXEC_COMMON_LINK_LIBS_DIR}")
MESSAGE(STATUS "EXEC_COMMON_LINK_LIBS           = ${EXEC_COMMON_LINK_LIBS}")