# 生成目标名字
SET(EXEC_LUA53_BUILD_TARGET_NAME "lua53")

# 头文件目录、依赖库目录、依赖库、宏定义、编译选项
IF(MSVC)
    # 头文件目录
    SET(EXEC_LUA53_INCLUDE_DIR
        ${PROJECT_SOURCE_DIR}/projects/lua53
        ${PROJECT_SOURCE_DIR}/3rd/lua-5.3/include
    )

    # 依赖库目录
    SET(EXEC_LUA53_LINK_LIBS_DIR
        ${PROJECT_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}
    )

    # 依赖库
    SET(EXEC_LUA53_LINK_LIBS
        liblua-5.3
    )

    # 宏定义
    SET(EXEC_LUA53_COMPILE_DEFINITIONS
        -DEXEC_LUA53_VALUE_JUST_FOR_TEST=818
    )

    # 编译选项
    SET(EXEC_LUA53_COMPILE_OPTIONS
        # ...
    )
ELSE()
    # 头文件目录
    SET(EXEC_LUA53_INCLUDE_DIR
        ${PROJECT_SOURCE_DIR}/projects/lua53
        ${PROJECT_SOURCE_DIR}/3rd/lua-5.3/include
    )

    # 依赖库目录
    SET(EXEC_LUA53_LINK_LIBS_DIR
        ${PROJECT_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}
    )

    # 依赖库
    SET(EXEC_LUA53_LINK_LIBS
        -llua-5.3
        -lm
        -ldl
    )

    # 宏定义
    SET(EXEC_LUA53_COMPILE_DEFINITIONS
        -DEXEC_LUA53_VALUE_JUST_FOR_TEST=818
    )

    # 编译选项
    SET(EXEC_LUA53_COMPILE_OPTIONS
        # ...
    )
ENDIF()

MESSAGE(STATUS "---------------------------------------------------------------------")

# 递归添加[./]目录下所有源文件(不包括头文件)
#AUX_SOURCE_DIRECTORY(./ EXEC_LUA53_DIR_SRC_LIST)
FILE(GLOB_RECURSE EXEC_LUA53_DIR_SRC_LIST ./*.c ./*.cc ./*.cpp)

# 生成目标可执行文件
ADD_EXECUTABLE(${EXEC_LUA53_BUILD_TARGET_NAME}                     ${EXEC_LUA53_DIR_SRC_LIST})
TARGET_INCLUDE_DIRECTORIES(${EXEC_LUA53_BUILD_TARGET_NAME} PRIVATE ${EXEC_LUA53_INCLUDE_DIR})
TARGET_COMPILE_DEFINITIONS(${EXEC_LUA53_BUILD_TARGET_NAME} PRIVATE ${EXEC_LUA53_COMPILE_DEFINITIONS})
TARGET_COMPILE_OPTIONS(${EXEC_LUA53_BUILD_TARGET_NAME}     PRIVATE ${EXEC_LUA53_COMPILE_OPTIONS})
TARGET_LINK_DIRECTORIES(${EXEC_LUA53_BUILD_TARGET_NAME}    PRIVATE ${EXEC_LUA53_LINK_LIBS_DIR})
TARGET_LINK_LIBRARIES(${EXEC_LUA53_BUILD_TARGET_NAME}      PRIVATE ${EXEC_LUA53_LINK_LIBS})

MESSAGE(STATUS "EXEC_LUA53_DIR_SRC_LIST        = ${EXEC_LUA53_DIR_SRC_LIST}")
MESSAGE(STATUS "EXEC_LUA53_INCLUDE_DIR         = ${EXEC_LUA53_INCLUDE_DIR}")
MESSAGE(STATUS "EXEC_LUA53_COMPILE_DEFINITIONS = ${EXEC_LUA53_COMPILE_DEFINITIONS}")
MESSAGE(STATUS "EXEC_LUA53_COMPILE_OPTIONS     = ${EXEC_LUA53_COMPILE_OPTIONS}")
MESSAGE(STATUS "EXEC_LUA53_LINK_LIBS_DIR       = ${EXEC_LUA53_LINK_LIBS_DIR}")
MESSAGE(STATUS "EXEC_LUA53_LINK_LIBS           = ${EXEC_LUA53_LINK_LIBS}")